2023-07-21T08:14:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5620154266 # 1010
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
* notice: last 14d: unq all: 5 11
* notice: prev accum: outdated-unq outdated-all / unq all: 118 143 / 128 153
* notice: next accum: outdated-unq outdated-all / unq all: 118 143 / 129 154
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-21]

2023-07-20T08:14:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5608550288 # 1007
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
* notice: last 14d: unq all: 5 10
* notice: prev accum: outdated-unq outdated-all / unq all: 117 142 / 128 153
* notice: next accum: outdated-unq outdated-all / unq all: 118 143 / 128 153
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-06] / []

2023-07-20T01:05:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5605671169 # 1006
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
* notice: last 14d: unq all: 5 11
* notice: prev accum: outdated-unq outdated-all / unq all: 109 129 / 128 153
* notice: next accum: outdated-unq outdated-all / unq all: 117 142 / 128 153
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-05] / []

2023-07-19T08:14:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5596676394 # 1004