@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-21T08:14:24Z",
-  "count_outdated" : 143,
-  "uniques_outdated" : 118,
+  "timestamp" : "2023-07-22T08:12:56Z",
+  "count_outdated" : 144,
+  "uniques_outdated" : 119,
   "count" : 154,
   "uniques" : 129,
   "clones" : [
-    {
-      "timestamp": "2023-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-09T00:00:00Z",
       "count": 2,
