@@ -1,3 +1,12 @@
+2023-07-22T08:12:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5629663413 # 1013
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
+* notice: last 14d: unq all: 5 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 118 143 / 129 154
+* notice: next accum: outdated-unq outdated-all / unq all: 119 144 / 129 154
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-08] / []
+
 2023-07-21T08:14:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5620154266 # 1010
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
